--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "jquery": "^3.7.1",
     "libphonenumber-js": "^1.11.2",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.11.0",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
